plugins {
    id("java")
    id("application")
}

group = "map"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'


dependencies {
    testImplementation(platform("org.junit:junit-bom:5.10.0"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-controls
    implementation 'org.openjfx:javafx-controls:21.0.5'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-base
    implementation 'org.openjfx:javafx-base:21.0.5'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-fxml
    implementation 'org.openjfx:javafx-fxml:21.0.5'

    // https://mvnrepository.com/artifact/org.openjfx/javafx-graphics
    implementation 'org.openjfx:javafx-graphics:21.0.5'

    implementation 'org.mindrot:jbcrypt:0.4'

    implementation 'org.openjfx:javafx-controls:21.0.5:mac'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-base
    implementation 'org.openjfx:javafx-base:21.0.5:mac'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-fxml
    implementation 'org.openjfx:javafx-fxml:21.0.5:mac'

    // https://mvnrepository.com/artifact/org.openjfx/javafx-graphics
    implementation 'org.openjfx:javafx-graphics:21.0.5:mac'

    implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'

    //runtimeOnly group: 'org.xerial', name: 'sqlite-jdbc', version: '3.40.1.0'
    // https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc
    implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '12.9.0.jre11-preview'

}

application {
    mainClass = 'map.Main'
}

jar {
    duplicatesStrategy (DuplicatesStrategy.EXCLUDE)
    manifest {
        attributes('Main-Class':'map.Main')
    }
    from {
        configurations.runtimeClasspath.collect {it.isDirectory() ? it:zipTree(it)}
    }
}

tasks.test {
    useJUnitPlatform()
}

run{
    jvmArgs = [
            '--module-path', '/Users/cosmin/Downloads/javafx-sdk-21.0.5/lib',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}